fix spacing slider

--- a/frontend/src/css/_main.scss
+++ b/frontend/src/css/_main.scss
@@ -72,7 +72,7 @@ div,
   }
 }
 .slider-padding {
-  padding: 1.5rem;
+  padding: 1.2rem;
   @media (min-width: 900px) {
     padding: 2rem;
   }
